# agent_tutorial

./: .gitignore  Ch04  README.md  pyproject.toml
Ch02/: ch02_PDF_CHATBOT.ipynb  ch02_PDF_LOADER.ipynb  ch02_SEMANTIC_TEXT_SPLITTER.ipynb  ch02_VECTOR_DATABASE.ipynb
Ch03/: ch03_REACT_AGENT.ipynb
Ch03/function_calling_agent/: agent.py  chat_ui.py  function.py  pyproject.toml
Ch03/react_agent/: agent.py  chat_ui.py  embedding.py  embedding_adapter_chroma.py  embedding_adapter_opensearch.py  llm_manager.py  pyproject.toml  react_agent.py  vs_manager.py
Ch03/react_agent/db_blockchain_usa_2025/: chroma.sqlite3
Ch03/react_agent/db_ict_policy_japan_2024/: chroma.sqlite3
Ch03/react_agent/db_ict_policy_usa_2024/: chroma.sqlite3
Ch04/: ch04_CUSTOMIZED_STATE_AND_TIME_TRAVEL.ipynb  ch04_HUMAN_IN_THE_LOOP.ipynb  ch04_LANGGRAPH_ARCHITECTURE.ipynb  ch04_PROJECT.ipynb  ch04_STATE_NODE_EDGE.ipynb  ch04_TOOL_AND_MEMORY.ipynb  usd_krw_rate_analysis_report.md
Ch04/customized_state_and_time_travel/: ch04_CUSTOMIZED_STATE_AND_TIME_TRAVEL.ipynb  llm.py  main.py
Ch04/human_in_the_loop/: ch04_HUMAN_IN_THE_LOOP.ipynb  main.py
Ch04/langgraph_architecture/: agent.py  ch04_LANGGRAPH_ARCHITECTURE.ipynb  chaining.py  generator_evaluator.py  orchestrator_worker.py  parallel_process.py  routing.py  structured_output.py  tool_call.py
Ch04/project/: ch04_PROJECT.ipynb  economic_data_visualization.py  llm.py
Ch04/tool_and_memory/: ch04_TOOL_AND_MEMORY.ipynb  main.py  pyproject.toml
Ch05/: ch05_crewai.ipynb
Ch05/output/: blog_summary.md
Ch08/: 소득5분위별_자산5분위별_자산__부채__소득_현황_20260318122153.csv
