[project]
name = "agent-tutorial"
version = "0.1.0"
description = "agent_tutorial 예제"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.2.4",
    "langchain>=1.0.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-tavily==0.2.18",
    "langchain-google-genai==4.2.4",
    "langchain-aws==1.5.0",
    "python-dotenv==1.2.2",
    "requests>=2.31.0",
    "boto3==1.42.89",
    "matplotlib==3.10.9",
    "langchain_experimental==0.4.2"
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
